<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cyclic Voca Review</string>
    <string name="okay">확인</string>
    <string name="cancel">취소</string>
    <string name="modify">수정</string>
    <string name="search">검색</string>
    <string name="add">추가</string>
    <string name="goback">뒤로</string>
    <string name="info">정보</string>
    <string name="setting">설정</string>
    <string name="filter">필터</string>
    <string name="selection">선택</string>
    <string name="synchronize">동기화</string>
    <string name="vocagroupmanage">단어장 관리</string>
    <string name="vocaupload">단어 업로드</string>
    <string name="profiles">Profiles</string>
    <string name="help">도움말</string>
    <string name="vocagroupadd">단어장 추가</string>
    <string name="vocagroupmodify">단어장 수정</string>
    <string name="vocagroupstudy">단어 학습 시작</string>
    <string name="vocagroupupload">단어 업로드</string>
    <string name="dataBackup">백업</string>
    <string name="dataBackupWrite">백업파일 내보내기</string>
    <string name="dataBackupRead">백업파일 불러오기</string>
    <string name="New">New</string>
    <string name="Wrong">Wrong</string>
    <string name="Review">Review</string>
    <string name="NewVoca">새 단어 수</string>
    <string name="WrongVoca">틀린 단어 수</string>
    <string name="ReviewVoca">복습할 단어 수</string>
    <string name="know">앎</string>
    <string name="dontknow">모름</string>
    <string name="completeknow">완전 앎</string>
    <string name="titlevocalistsearch">단어 목록 검색</string>
    <string name="titlevocagroupadd">단어장 추가</string>
    <string name="titlevocagroupmodify">단어장 수정</string>
    <string name="titlevocaLearningCycleAdd">단어 학습 주기 추가</string>
    <string name="titlevocaLearningCycleModify">단어 학습 주기 수정</string>
    <string name="titlevocaLearningCycleManage">단어 학습 주기 관리</string>
    <string name="vocaLearningCycleName">단어 학습 주기 이름</string>
    <string name="vocaLearningCycleNameExample">예) 영단어 학습 주기</string>
    <string name="vocaLearningCycleArea">주기</string>
    <string name="vocaLearningCycleArea1">주기 1</string>
    <string name="vocaLearningCycleArea2">주기 2</string>
    <string name="vocaLearningCycleAreaAdd">+ 주기 추가하기</string>
    <string name="vocaLearningCycleAreaExample">예) 1, 3, 7, 14, ... 등의 숫자 한 개</string>
    <string name="titlevocaadd">단어 추가</string>
    <string name="titlevocamodify">단어 수정</string>
    <string name="vocaBold">B</string>
    <string name="vocaItalic">I</string>
    <string name="recordStart">녹음 시작</string>
    <string name="recordEnd">녹음 끝</string>
    <string name="close">닫기</string>
    <string name="titlevocagroupinfo">단어장 정보</string>
    <string name="titlevocainfo">단어 정보</string>
    <string name="titlesetting">설정</string>
    <string name="settingaccount">계정 설정</string>
    <string name="settingaccountChangePassword">비밀번호 변경</string>
    <string name="settingaccountChangeEmail">이메일 변경</string>
    <string name="change">변경</string>
    <string name="settingaccountDelete">회원 탈퇴</string>
    <string name="titlelogin">계정 로그인</string>
    <string name="titlelogout">계정 로그아웃</string>
    <string name="titleregister">계정 등록</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="passwordCheck">비밀번호 확인</string>
    <string name="passwordBefore">현재 비밀번호</string>
    <string name="passwordAfter">새 비밀번호</string>
    <string name="passwordAfterCheck">새 비밀번호 확인</string>
    <string name="emailAfter">새 이메일 주소</string>
    <string name="emailAfterCheck">새 이메일 주소 확인</string>
    <string name="login">로그인</string>
    <string name="loginFail">올바르지 않은 이메일 또는 비밀번호입니다.</string>
    <string name="register">계정 만들기</string>
    <string name="registerButton">등록</string>
    <string name="registerPasswordCheckSucceed">계정 등록이 완료되었습니다.</string>
    <string name="registerEmailCheck">올바른 이메일 주소를 입력해주세요.</string>
    <string name="registerAgreeCheck">모든 이용약관에 동의해주세요.</string>
    <string name="verifyEmail">인증하기</string>
    <string name="registerPasswordCheckFail">비밀번호가 일치하지 않습니다.</string>
    <string name="findpassword">비밀번호 찾기</string>
    <string name="sendtemppassword">비밀번호 전송</string>
    <string name="sendtemppasswordMessage">비밀번호를 메일로 전송했습니다.</string>
    <string name="sendtemppasswordMailTitle">Voca Cyclic Review 비밀번호를 보내드립니다.</string>
    <string name="sendtemppasswordMailText1">비밀번호는</string>
    <string name="sendtemppasswordMailText2">입니다.</string>
    <string name="settingvocalearningcycle">단어 학습 주기 설정</string>
    <string name="settingtheme">테마 설정</string>
    <string name="settingbackup">백업 설정</string>
    <string name="settinglearning">학습 관련 설정</string>
    <string name="settinglearningVocaOrder">새 단어/복습할 단어 순서 설정</string>
    <string name="settinglearningVocaLimit">단어 학습 갯수 설정</string>
    <string name="learningVocaLimitTitle">학습할 단어 갯수 설정</string>
    <string name="learningVocaLimitMessage">각각 설정한 숫자를 최대로 하여 새 단어와 \n복습할 단어가 학습 목록에 추가됩니다.</string>
    <string name="learningVocaLimitNew">새 단어</string>
    <string name="learningVocaLimitReview">복습할 단어</string>
    <string name="learningVocaLimitNewHint">불러올 새 단어 갯수의 최댓값을 입력해주세요.</string>
    <string name="learningVocaLimitReviewHint">불러올 복습할 단어 갯수의 최댓값을 입력해주세요.</string>
    <string name="settinglearningCountLimit">단어 학습 카운트다운 설정</string>
    <string name="about">About</string>
    <string name="reset">초기화하기</string>
    <string name="titletutorial">도움말</string>
    <string name="titlesettingAbout">About</string>
    <string name="aboutDeveloper">제작자</string>
    <string name="aboutDeveloperName">안경호</string>
    <string name="aboutDeveloperEmail">이메일</string>
    <string name="aboutDeveloperEmailAddress">seah.ahn.nt@gmail.com</string>
    <string name="aboutEmailSubject">건의사항</string>
    <string name="totalvocacount">포함 단어 수</string>
    <string name="vocagroupname">단어장 이름</string>
    <string name="vocagroupnameExample">예) 영어 단어 모음</string>
    <string name="vocagroupcycle">단어 학습 주기</string>
    <string name="vocagrouparea">영역</string>
    <string name="vocagrouparea1">영역 1</string>
    <string name="vocagrouparea2">영역 2</string>
    <string name="vocagroupareaadd">+ 영역 추가하기</string>
    <string name="vocagroupexample">영어 단어 모음</string>
    <string name="area1example">단어</string>
    <string name="area2example">의미</string>
    <string name="area3example">예문</string>
    <string name="vocagroupareaExample">예) 단어, 의미, 예문 등</string>
    <string name="vocagroupselect">단어장 :</string>
    <string name="vocadelete">단어 삭제</string>
    <string name="arealocationSetting">위치 설정</string>
    <string name="arealocation">위치</string>
    <string name="frontside">앞</string>
    <string name="backside">뒤</string>
    <string name="currentlearningcycle">현재 학습 주기 :</string>
    <string name="searchInput">검색하실 단어를 입력하세요.</string>
    <string name="searchFilterInput">검색하실 필터를 입력하세요.</string>
    <string name="searchFilterNone">필터 없음</string>
    <string name="searchFilterVocaCycleListWrong">틀린 단어</string>
    <string name="searchFilterVocaCycleListNew">새 단어</string>
    <string name="searchFilterVocaCycleListReview">복습할 단어</string>
    <string-array name="searchFilterVocaCycleList">
        <item>"틀린 단어"</item>
        <item>"새 단어"</item>
        <item>"복습할 단어"</item>
    </string-array>
    <string name="noWords">학습할 단어가 없습니다.\n
        단어를 추가해주세요.
    </string>
    <string name="noMoreLearning">더이상 학습할 단어가 없습니다.</string>
    <string name="searchexample">Voca Search List Example</string>
    <string name="userexample1">User 1</string>
    <string name="userexample2">User 2</string>
    <string name="english">영어</string>
    <string name="chinese_Simplified">중국어-간체</string>
    <string name="chinese_traditional">중국어-번체</string>
    <string name="japanese">일본어</string>
    <string name="spanish">스페인어</string>
    <string name="french">프랑스어</string>
    <string name="russian">러시아어</string>
    <string name="german">독일어</string>
    <string name="italian">이탈리아어</string>
    <string name="vietnamese">베트남어</string>
    <string name="indonesian">인도네시아어</string>
    <string name="thai">태국어</string>
    <string name="korean">한국어</string>
    <string name="colon">:</string>
    <string-array name="themeColor">
        <item>"밝은 테마"</item>
        <item>"어두운 테마"</item>
    </string-array>
    <string-array name="vocaOrder">
        <item>"새 단어"</item>
        <item>"복습할 단어"</item>
    </string-array>
    <string-array name="takePhoto">
        <item>"카메라"</item>
        <item>"갤러리"</item>
        <item>"사진 제거"</item>
    </string-array>
    <string name="helpIntroduce">
        Cyclic Voca Review를 다운로드 해주셔서 감사합니다!\n
        \n
        Cyclic Voca Review는 외국어 단어 학습 및 주기적인 복습을 목적으로 만들어졌습니다. 본 앱의 주요 기능은 다음과 같습니다.\n
        \n
        1. 단어 학습 주기 추가/수정/삭제\n
        2. 단어장 추가/수정/삭제\n
        3. 단어 추가/수정/삭제 및 학습\n
        4. 엑셀 파일을 이용한 단어 대량 업로드\n
        5. 백업 내보내기 및 불러오기\n
        \n
        다음 페이지로 넘겨서 각 기능에 대한 자세한 설명을 참고해주시기 바랍니다.\n
        \n
    </string>
    <string name="helpLearningCycle">
        Cyclic Voca Review에서는 단어 학습 주기를 설정하실 수 있습니다.\n
        \n
        앱 실행 후 메인 화면의 좌측 하단 "단어장 관리" 버튼을 누르시면 "단어 학습 주기 관리"를 선택하실 수 있습니다.\n
        "단어 학습 주기 관리" 화면 우측 하단에 있는 원형 버튼을 누르시면 단어 학습 주기 추가가 가능합니다.\n
        추가된 단어 학습 주기는 "단어 학습 주기 관리" 화면 중앙에 있는 목록에 표시됩니다.\n
        단어 학습 주기를 수정하려면 우측으로, 삭제하려면 좌측으로 스와이프 후 표시되는 버튼을 누르시면 됩니다.\n
        \n
        단어 학습 주기는 오늘 학습한 단어를 며칠 뒤에 다시 학습할 것인지 결정합니다.\n
        예시 : 주기 1 = 1, 주기 2 = 3으로 설정한 경우\n
        최초 학습일자 : 9월 1일\n
        2차 학습일자 : 9월 2일 (최초 학습일자로부터 주기 1의 숫자만큼 지난 후)\n
        3차 학습일자 : 9월 5일 (2차 학습일자로부터 주기 2의 숫자만큼 지난 후)\n
        \n
        기본 2개의 단어 학습 주기(필수 입력)가 있으며, 사용자께서 원하시는 만큼 주기를 추가할 수 있습니다.\n
        \n
    </string>
    <string name="helpVocagroup">
        Cyclic Voca Review에서 단어장은 단어들을 구분하여 저장하는 역할입니다.\n
        \n
        단어 학습 주기 추가를 먼저 하신 후, 메인 화면의 좌측 하단 "단어장 관리" 버튼 메뉴에 있는 "단어장 추가"가 가능합니다.\n
        추가된 단어장은 메인 화면 중앙에 있는 목록에 표시됩니다.\n
        단어장을 수정하려면 우측으로, 삭제하려면 좌측으로 스와이프 후 표시되는 버튼을 누르시면 됩니다.\n
        "단어장 추가"에는 단어장 이름과 함께 해당 단어장에 지정할 단어 학습 주기, 그리고 "영역"이라고 불리는 입력칸이 있습니다.\n
        여기서 "영역"이란 해당 단어장에 단어를 추가할 때 텍스트 또는 이미지를 입력할 수 있는 곳을 의미합니다.\n
        각각의 "영역"에는 사용자께서 원하시는 이름을 붙일 수 있습니다.\n
        \n
        또한 각각의 "영역"에는 위치 설정, 즉 단어 학습 시 앞면에 표시할 것인지 뒷면에 표시할 것인지를 결정하는 스위치가 있습니다.\n
        스위치를 "앞"으로 설정하면 해당 영역에 입력한 단어의 텍스트 또는 이미지는 단어 학습 시 먼저 출력됩니다.\n
        스위치를 "뒤"로 설정하면 해당 영역에 입력한 단어의 텍스트 또는 이미지는 앞면을 터치하면 출력됩니다.\n
        \n
        영역은 기본 2개(필수 입력)가 있으며, 사용자께서 원하시는 만큼 영역을 추가할 수 있습니다.\n
        또한 기본 2개의 영역은 서로의 위치(앞/뒤)가 다르게 설정되어야 합니다.
        \n
    </string>
    <string name="helpVoca">
        단어장 추가를 하신 후, 메인 화면에 추가된 단어장을 클릭하면 "단어 학습 시작"과 "단어 업로드"가 선택 가능합니다.
        여기서 "단어 학습 시작"을 클릭하면 단어 학습 화면으로 넘어갑니다.\n
        \n
        그 후 단어 학습 화면의 상단에 위치한 4개의 버튼 중 2번째 버튼을 누르면 단어 추가 화면으로 넘어갑니다.
        단어 추가 화면에서는 사용자께서 선택한 단어장의 형식에 맞게 각 영역의 이름들과 위치 설정 스위치가 세팅됩니다.\n
        \n
        텍스트는 영역 이름 밑에 입력 가능하며, 이미지는 텍스트 입력칸 우측 그림 버튼을 누르신 후 카메라 또는 갤러리를 통해 가져오실 수 있습니다.\n
        \n
        단어 추가를 위해서는 첫번째와 두번째 영역의 텍스트를 필수로 입력해주셔야 합니다.\n
        \n
        단어 추가를 마치시려면 단어 추가 화면 좌측 상단 화살표 버튼을 누르시면 됩니다.
        그러면 단어 학습 화면에 곧바로 추가된 단어가 보일 것입니다.\n
        \n
        단어를 수정하시려면 단어 학습 화면 상단의 3번째 연필 모양 버튼을 누르시면 됩니다.
        수정하는 방법은 단어 추가와 동일하게 진행하시면 됩니다.
        단어를 삭제하고 싶으시다면 단어 수정 화면 우측 상단의 붉은색 "단어 삭제" 텍스트를 눌러주세요.\n
        \n
    </string>
    <string name="helpVocaUpload">
        단어장 추가를 하신 후, 메인 화면에 추가된 단어장을 클릭하면 "단어 학습 시작"과 "단어 업로드"가 선택 가능합니다.
        여기서 "단어 업로드"를 클릭하면 엑셀 파일을 불러온다는 대화창이 나오고, "예"를 누르면 파일 선택 화면으로 넘어갑니다.\n
        \n
        사용자께서 미리 기기에 다운로드 받으신 엑셀 파일이 있다면 파일 선택 화면에 나올 것입니다.
        원하시는 엑셀 파일을 선택 후 잠시 기다리시면 단어 업로드가 완료될 것입니다.\n
        [주의 1 : 엑셀 파일 업로드 시, 엑셀 파일의 두번째 행에 있는 데이터부터 불러옵니다.]\n
        [주의 2 : 엑셀 파일 업로드 시, 선택한 단어장에 만들어져 있는 영역의 순서대로 엑셀 파일 각각의 열에 있는 데이터가 들어갑니다.]\n
        [주의 3 : 업로드 가능한 엑셀 파일 확장자는 .xls 입니다.]\n
        \n
    </string>
</resources>