<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fui_transparent"
        android:orientation="vertical"
        tools:context=".VocaShowTextActionModePopup">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">

        <TextView
                android:text="입력된 텍스트"
                android:textSize="30dp"
                android:textIsSelectable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/TextView_input"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp" android:layout_marginStart="24dp"/>

        <TextView
                android:id="@+id/TextView_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fui_transparent"
                android:text="@string/close"
                android:textSize="20sp"
                android:textColor="@color/colorSwitchRed"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="28dp" android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="30dp" android:id="@+id/spinner"
                android:background="@drawable/spinner_background"
                app:layout_constraintTop_toBottomOf="@+id/TextView_input" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:orientation="horizontal"
                      android:id="@+id/linearLayout" app:layout_constraintTop_toBottomOf="@+id/spinner"
                      app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginTop="24dp">
            <RadioGroup android:layout_width="wrap_content" android:layout_height="match_parent"
                        android:id="@+id/radioGroup1"
                        android:layout_weight="1">
                <RadioButton
                        android:text="@string/english"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/RadioButton_en"/>
                <RadioButton
                        android:text="@string/japanese"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/RadioButton_ja"/>
                <RadioButton
                        android:text="@string/russian"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/RadioButton_ru"/>
                <RadioButton
                        android:text="@string/vietnamese"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/RadioButton_vi"/>
            </RadioGroup>

            <RadioGroup android:layout_width="wrap_content" android:layout_height="match_parent"
                        android:id="@+id/radioGroup2"
                        android:layout_weight="1">
                <RadioButton
                        android:text="@string/chinese_Simplified"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/RadioButton_zhCN"/>
                <RadioButton
                        android:text="@string/spanish"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/RadioButton_es"/>
                <RadioButton
                        android:text="@string/german"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/RadioButton_de"/>
                <RadioButton
                        android:text="@string/indonesian"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/RadioButton_id"/>
            </RadioGroup>

            <RadioGroup android:layout_width="wrap_content" android:layout_height="match_parent"
                        android:id="@+id/radioGroup3"
                        android:layout_weight="1">
                <RadioButton
                        android:text="@string/chinese_traditional"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/RadioButton_zhTW"/>
                <RadioButton
                        android:text="@string/french"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/RadioButton_fr"/>
                <RadioButton
                        android:text="@string/italian"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/RadioButton_it"/>
                <RadioButton
                        android:text="@string/thai"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/RadioButton_th"/>
            </RadioGroup>
        </LinearLayout>

        <TextView
                android:text=""
                android:textIsSelectable="true"
                android:textSize="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/TextView_output"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"/>

        <Button android:layout_width="0dp" android:layout_height="wrap_content"
                android:id="@+id/Button_webSearch"
                android:text="웹 검색" app:layout_constraintTop_toBottomOf="@+id/TextView_output"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
                android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>