<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingAbout">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4a4646"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/Toolbar_settingAbout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <ImageButton
            android:contentDescription="@string/goback"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/abc_vector_test"
            android:id="@+id/ImageButton_settingAbout_goback"
            tools:layout_editor_absoluteY="116dp"
            app:layout_constraintStart_toStartOf="@+id/Toolbar_settingAbout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="@+id/Toolbar_settingAbout"
            app:layout_constraintBottom_toBottomOf="@+id/Toolbar_settingAbout"/>
    <TextView
            android:text="@string/titlesettingAbout"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ImageButton_settingAbout_title"
            app:layout_constraintStart_toStartOf="@+id/Toolbar_settingAbout"
            app:layout_constraintEnd_toEndOf="@+id/Toolbar_settingAbout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="@+id/Toolbar_settingAbout" android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/Toolbar_settingAbout" android:layout_marginBottom="16dp"/>

    <ScrollView android:layout_width="match_parent" android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/Toolbar_settingAbout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
                        android:layout_gravity="center_vertical">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:gravity="start|center"
                          android:layout_marginVertical="30dp"
                          android:layout_marginHorizontal="30dp">
                <TextView
                        android:id="@+id/TextView_settingAbout_aboutDeveloper"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/aboutDeveloper"
                        android:textSize="24sp"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/colon"
                          android:textSize="24sp"
                          android:layout_marginHorizontal="30sp"/>
                <TextView
                        android:id="@+id/TextView_settingAbout_aboutDeveloperName"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/aboutDeveloperName"
                        android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:gravity="start|center"
                          android:layout_marginVertical="30dp"
                          android:layout_marginHorizontal="30dp">
                <TextView
                        android:id="@+id/TextView_settingAbout_aboutDeveloperEmail"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/aboutDeveloperEmail"
                        android:textSize="24sp"
                        app:layout_constraintTop_toTopOf="@+id/TextView_settingAbout_aboutDeveloper"
                        app:layout_constraintStart_toStartOf="@+id/TextView_settingAbout_aboutDeveloper"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/TextView_settingAbout_aboutDeveloperEmailAddress"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/colon"
                          android:textSize="24sp"
                          android:layout_marginHorizontal="30sp"/>
                <TextView
                        android:id="@+id/TextView_settingAbout_aboutDeveloperEmailAddress"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/aboutDeveloperEmailAddress"
                        android:textSize="19sp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>